<resources>
    <string name="app_name">DarkLightTheme</string>

    <string name="loginName">login</string>
    <string name="password">password</string>
    <string name="my_cool_style">My cool style</string>
    <string name="material_light">Material light</string>
    <string name="material_light_action_bar_dark">Material light action bar dark</string>
    <string name="material_dark">Material dark</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">÷</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">×</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="subtract">-</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
    <string name="c">C</string>
    <string name="plus">+</string>
    <string name="display2">0</string>
    <string name="display1">0</string>


</resources>