<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display1"
        android:background="#ddd"
        android:textSize="36sp"
        android:id="@+id/display1"
        android:singleLine="true"
        android:ellipsize="none"
        android:maxLength="11"/>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display2"
        android:background="#ddd"
        android:textSize="36sp"
        android:id="@+id/display2"
        android:singleLine="true"
        android:ellipsize="none"
        android:maxLength="11"
        android:layout_below="@+id/display1"/>

    <LinearLayout
        android:id="@+id/vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/display2"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/row0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_7" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_9" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_divide"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/divide" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_multiply"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/multiply" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_subtract"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/subtract" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/decimal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/decimal" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_equals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/equals" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/plus" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/key_0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_0" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/key_C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/calc_button_key_C"
            android:layout_weight="1"
            android:text="@string/c" />


        <RadioGroup
            android:id="@+id/radioButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/calc_button_height">


            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonMyCoolStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_cool_style" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonMaterialLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/material_light" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonMaterialLightDarkAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/material_light_action_bar_dark" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioButtonMaterialDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/material_dark" />

        </RadioGroup>

    </LinearLayout>

</RelativeLayout>





